--- a/ActivosFijos/ActivosFijos.csproj
+++ b/ActivosFijos/ActivosFijos.csproj
@@ -73,6 +73,12 @@
     <Compile Include="frmEmpleadosForm.Designer.cs">
       <DependentUpon>frmEmpleadosForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmParametros.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmParametros.Designer.cs">
+      <DependentUpon>frmParametros.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmProveedores.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -121,6 +127,15 @@
     <Compile Include="Models\Proveedor.cs">
       <DependentUpon>DbModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Tipo_Activo.cs">
+      <DependentUpon>DbModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Tipo_Pago.cs">
+      <DependentUpon>DbModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Ubicacion.cs">
+      <DependentUpon>DbModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="frmActivosFijos.resx">
@@ -131,6 +146,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmEmpleadosForm.resx">
       <DependentUpon>frmEmpleadosForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmParametros.resx">
+      <DependentUpon>frmParametros.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmProveedores.resx">
       <DependentUpon>frmProveedores.cs</DependentUpon>
