--- a/ActivosFijos/ActivosFijos.csproj
+++ b/ActivosFijos/ActivosFijos.csproj
@@ -67,6 +67,12 @@
     <Compile Include="frmDepartamento.Designer.cs">
       <DependentUpon>frmDepartamento.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmDepartamentoForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmDepartamentoForm.Designer.cs">
+      <DependentUpon>frmDepartamentoForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmEmpleados.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -108,6 +114,12 @@
     </Compile>
     <Compile Include="frmUbicacion.Designer.cs">
       <DependentUpon>frmUbicacion.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmUbicacionForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmUbicacionForm.Designer.cs">
+      <DependentUpon>frmUbicacionForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Menu.cs">
       <SubType>Form</SubType>
@@ -165,6 +177,9 @@
     <EmbeddedResource Include="frmDepartamento.resx">
       <DependentUpon>frmDepartamento.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmDepartamentoForm.resx">
+      <DependentUpon>frmDepartamentoForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmEmpleados.resx">
       <DependentUpon>frmEmpleados.cs</DependentUpon>
     </EmbeddedResource>
@@ -185,6 +200,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmUbicacion.resx">
       <DependentUpon>frmUbicacion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmUbicacionForm.resx">
+      <DependentUpon>frmUbicacionForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Menu.resx">
       <DependentUpon>Menu.cs</DependentUpon>
