--- a/ActivosFijos/ActivosFijos.csproj
+++ b/ActivosFijos/ActivosFijos.csproj
@@ -127,11 +127,11 @@
     <Compile Include="frmUbicacionForm.Designer.cs">
       <DependentUpon>frmUbicacionForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Menu.cs">
+    <Compile Include="frmMenu.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Menu.Designer.cs">
-      <DependentUpon>Menu.cs</DependentUpon>
+    <Compile Include="frmMenu.Designer.cs">
+      <DependentUpon>frmMenu.cs</DependentUpon>
     </Compile>
     <Compile Include="Models\Activos_Fijos.cs">
       <DependentUpon>DbModel.tt</DependentUpon>
@@ -166,6 +166,9 @@
     <Compile Include="Models\Proveedor.cs">
       <DependentUpon>DbModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Roles.cs">
+      <DependentUpon>DbModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Tipo_Activo.cs">
       <DependentUpon>DbModel.tt</DependentUpon>
     </Compile>
@@ -175,8 +178,12 @@
     <Compile Include="Models\Ubicacion.cs">
       <DependentUpon>DbModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Usuarios.cs">
+      <DependentUpon>DbModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\SecurePasswordHasher.cs" />
     <EmbeddedResource Include="frmActivosFijos.resx">
       <DependentUpon>frmActivosFijos.cs</DependentUpon>
     </EmbeddedResource>
@@ -213,8 +220,8 @@
     <EmbeddedResource Include="frmUbicacionForm.resx">
       <DependentUpon>frmUbicacionForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Menu.resx">
-      <DependentUpon>Menu.cs</DependentUpon>
+    <EmbeddedResource Include="frmMenu.resx">
+      <DependentUpon>frmMenu.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -271,7 +278,9 @@
     <Content Include="Resources\account_selected.png" />
     <Content Include="Resources\format-list-bulleted_selected.png" />
     <Content Include="Resources\location-marker_selected.png" />
+    <None Include="Resources\proxy.duckduckgo.png" />
     <Content Include="Resources\truck_selected.png" />
+    <None Include="Resources\user-login-icon.png" />
     <None Include="Resources\format-list-bulleted.png" />
   </ItemGroup>
   <ItemGroup>
