--- a/ActivosFijos/ActivosFijos.csproj
+++ b/ActivosFijos/ActivosFijos.csproj
@@ -55,6 +55,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ExportForms\FrmExportEmpleados.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ExportForms\FrmExportEmpleados.Designer.cs">
+      <DependentUpon>FrmExportEmpleados.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmActivosFijos.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -196,6 +202,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\SecurePasswordHasher.cs" />
+    <EmbeddedResource Include="ExportForms\FrmExportEmpleados.resx">
+      <DependentUpon>FrmExportEmpleados.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmActivosFijos.resx">
       <DependentUpon>frmActivosFijos.cs</DependentUpon>
     </EmbeddedResource>
@@ -294,7 +303,9 @@
     </Content>
     <Content Include="Resources\account-group_selected.png" />
     <Content Include="Resources\account_selected.png" />
+    <None Include="Resources\excel.png" />
     <Content Include="Resources\format-list-bulleted_selected.png" />
+    <None Include="Resources\unapeclogo.png" />
     <None Include="Resources\icon.png" />
     <Content Include="Resources\location-marker_selected.png" />
     <None Include="Resources\user_male2-128.png" />
@@ -313,6 +324,35 @@
     <None Include="Resources\account.png" />
     <None Include="Resources\save.png" />
     <None Include="Resources\delete.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <COMReference Include="Microsoft.Office.Core">
+      <Guid>{2DF8D04C-5BFA-101B-BDE5-00AA0044DE52}</Guid>
+      <VersionMajor>2</VersionMajor>
+      <VersionMinor>8</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>primary</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
+    <COMReference Include="Microsoft.Office.Interop.Excel">
+      <Guid>{00020813-0000-0000-C000-000000000046}</Guid>
+      <VersionMajor>1</VersionMajor>
+      <VersionMinor>9</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>primary</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
+    <COMReference Include="VBIDE">
+      <Guid>{0002E157-0000-0000-C000-000000000046}</Guid>
+      <VersionMajor>5</VersionMajor>
+      <VersionMinor>3</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>primary</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
