Added Calculo Depreciacion form into Activos form, added Logout button in menu and current user's name. Also fixed Activos Fijos cascade delete when it has Calculo Depreciacion

--- a/ActivosFijos/ActivosFijos.csproj
+++ b/ActivosFijos/ActivosFijos.csproj
@@ -328,6 +328,7 @@
     <Content Include="Resources\format-list-bulleted_selected.png" />
     <None Include="Resources\unapeclogo.png" />
     <None Include="Resources\icon.png" />
+    <None Include="Resources\hand-holding-usd.png" />
     <Content Include="Resources\location-marker_selected.png" />
     <None Include="Resources\user_male2-128.png" />
     <None Include="Resources\user-male-circle-filled.png" />
