--- a/ActivosFijos/ActivosFijos.csproj
+++ b/ActivosFijos/ActivosFijos.csproj
@@ -39,6 +39,25 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.ReportViewer.Common, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ReportingServices.ReportViewerControl.Winforms.150.900.148\lib\net40\Microsoft.ReportViewer.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.ReportViewer.DataVisualization, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ReportingServices.ReportViewerControl.Winforms.150.900.148\lib\net40\Microsoft.ReportViewer.DataVisualization.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.ReportViewer.Design, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ReportingServices.ReportViewerControl.Winforms.150.900.148\lib\net40\Microsoft.ReportViewer.Design.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.ReportViewer.ProcessingObjectModel, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ReportingServices.ReportViewerControl.Winforms.150.900.148\lib\net40\Microsoft.ReportViewer.ProcessingObjectModel.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.ReportViewer.WinForms, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ReportingServices.ReportViewerControl.Winforms.150.900.148\lib\net40\Microsoft.ReportViewer.WinForms.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.SqlServer.Types, Version=14.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.SqlServer.Types.14.0.314.76\lib\net40\Microsoft.SqlServer.Types.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -55,11 +74,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ActivosFijosDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ActivosFijosDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="ExportForms\FrmExportEmpleados.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="ExportForms\FrmExportEmpleados.Designer.cs">
       <DependentUpon>FrmExportEmpleados.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmActivos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmActivos.Designer.cs">
+      <DependentUpon>FrmActivos.cs</DependentUpon>
     </Compile>
     <Compile Include="frmActivosFijos.cs">
       <SubType>Form</SubType>
@@ -132,6 +162,18 @@
     </Compile>
     <Compile Include="frmProveedoresForm.Designer.cs">
       <DependentUpon>frmProveedoresForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmReportCalculo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmReportCalculo.Designer.cs">
+      <DependentUpon>FrmReportCalculo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmReportEmpleado.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmReportEmpleado.Designer.cs">
+      <DependentUpon>FrmReportEmpleado.cs</DependentUpon>
     </Compile>
     <Compile Include="frmUbicacion.cs">
       <SubType>Form</SubType>
@@ -219,8 +261,12 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="Services\SecurePasswordHasher.cs" />
+    <Compile Include="SqlServerTypes\Loader.cs" />
     <EmbeddedResource Include="ExportForms\FrmExportEmpleados.resx">
       <DependentUpon>FrmExportEmpleados.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmActivos.resx">
+      <DependentUpon>FrmActivos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmActivosFijos.resx">
       <DependentUpon>frmActivosFijos.cs</DependentUpon>
@@ -258,6 +304,12 @@
     <EmbeddedResource Include="frmProveedoresForm.resx">
       <DependentUpon>frmProveedoresForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FrmReportCalculo.resx">
+      <DependentUpon>FrmReportCalculo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmReportEmpleado.resx">
+      <DependentUpon>FrmReportEmpleado.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmUbicacion.resx">
       <DependentUpon>frmUbicacion.cs</DependentUpon>
     </EmbeddedResource>
@@ -278,10 +330,24 @@
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="RprtActivo.rdlc" />
+    <EmbeddedResource Include="RprtCalcDepr.rdlc" />
+    <EmbeddedResource Include="RprtEmpleados.rdlc" />
     <EntityDeploy Include="Models\DbModel.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>DbModel.Designer.cs</LastGenOutput>
     </EntityDeploy>
+    <None Include="ActivosFijosDataSet.xsc">
+      <DependentUpon>ActivosFijosDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="ActivosFijosDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>ActivosFijosDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="ActivosFijosDataSet.xss">
+      <DependentUpon>ActivosFijosDataSet.xsd</DependentUpon>
+    </None>
     <None Include="Models\DbModel.edmx.diagram">
       <DependentUpon>DbModel.edmx</DependentUpon>
     </None>
@@ -322,6 +388,12 @@
     </Content>
     <Content Include="Resources\account-group_selected.png" />
     <Content Include="Resources\account_selected.png" />
+    <None Include="Resources\view_original_volume_report__280874.png" />
+    <Content Include="SqlServerTypes\readme.htm" />
+    <Content Include="SqlServerTypes\x64\msvcr120.dll" />
+    <Content Include="SqlServerTypes\x64\SqlServerSpatial140.dll" />
+    <Content Include="SqlServerTypes\x86\msvcr120.dll" />
+    <Content Include="SqlServerTypes\x86\SqlServerSpatial140.dll" />
     <None Include="Resources\excel.png" />
     <None Include="Resources\file-invoice-dollar.png" />
     <None Include="Resources\file-invoice-dollar-solid.png" />
