--- a/ActivosFijos/App.config
+++ b/ActivosFijos/App.config
@@ -8,7 +8,11 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
   <connectionStrings>
-    <add name="ActivosEntities" connectionString="metadata=res://*/Models.DbModel.csdl|res://*/Models.DbModel.ssdl|res://*/Models.DbModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=ActivosFijos;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ActivosEntities" connectionString="metadata=res://*/Models.DbModel.csdl|res://*/Models.DbModel.ssdl|res://*/Models.DbModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=NOTSNEW;initial catalog=ActivosFijos;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      providerName="System.Data.EntityClient" />
+    <add name="ActivosFijos.Properties.Settings.ActivosFijosConnectionString"
+      connectionString="Data Source=NOTSNEW;Initial Catalog=ActivosFijos;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
