--- a/ActivosFijos/App.config
+++ b/ActivosFijos/App.config
@@ -5,14 +5,11 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
   </startup>
   <connectionStrings>
-    <add name="ActivosEntities" connectionString="metadata=res://*/Models.DbModel.csdl|res://*/Models.DbModel.ssdl|res://*/Models.DbModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=NOTSNEW;initial catalog=ActivosFijos;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-      providerName="System.Data.EntityClient" />
-    <add name="ActivosFijos.Properties.Settings.ActivosFijosConnectionString"
-      connectionString="Data Source=NOTSNEW;Initial Catalog=ActivosFijos;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="ActivosEntities" connectionString="metadata=res://*/Models.DbModel.csdl|res://*/Models.DbModel.ssdl|res://*/Models.DbModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\BOSQUE;initial catalog=ActivosFijos;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ActivosFijos.Properties.Settings.ActivosFijosConnectionString" connectionString="Data Source=.\BOSQUE;Initial Catalog=ActivosFijos;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
